# libsourcey

./: .gitattributes  .gitignore
cmake/: FindWebRTC.cmake
src/av/src/apple/: avfoundation.mm
src/webrtc/include/: webrtcelevator.h
src/webrtc/include/scy/webrtc/: streamrecorder.h
src/webrtc/samples/: CMakeLists.txt
src/webrtc/samples/webrtcrecorder/: CMakeLists.txt  config.h  lib.cpp  main.cpp  signaler.cpp  signaler.h
src/webrtc/samples/webrtcrecorder/client/: app.js  index.ejs  package-lock.json  symple.json
src/webrtc/src/: streamrecorder.cpp
